--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -101,6 +101,41 @@ catch (Exception e
 System. out.printin (e);
 
 
+// Fetch the audio file in chunks
+const response = await fetch('my-audio-file.mp3');
+const reader = response.body.getReader();
+
+// Define the audio context and decoder
+const audioContext = new AudioContext();
+const audioDecoder = await audioContext.decodeAudioData();
+
+// Function to read the next chunk of bytes
+async function getNextChunk() {
+  const { done, value } = await reader.read();
+  if (done) return null;
+  return value;
+}
+
+// Function to play the audio
+async function playAudio() {
+  let bytes = [];
+  while (true) {
+    const chunk = await getNextChunk();
+    if (!chunk) break;
+    bytes = bytes.concat(Array.from(chunk));
+  }
+  const audioBuffer = await audioDecoder.decodeAudioData(new Uint8Array(bytes));
+  const source = audioContext.createBufferSource();
+  source.buffer = audioBuffer;
+  source.connect(audioContext.destination);
+  source.start();
+}
+
+// Call the playAudio function to start playback
+playAudio();
+
+
+
 
 
 
